template/manifest-templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}
  template:
    metadata:
      labels:
        app: ${APP_NAME}
        backstage.io/kubernetes-id: ${APP_NAME}
    spec:
      containers:
        - name: ${APP_NAME}
          image: ${DOCKER_IMAGE}
          imagePullPolicy: Always
          # ports:

          #   - containerPort: 3000
