template/manifest-templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_NAME}
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /${APP_NAME}
            pathType: Prefix
            backend:
              service:
                name: ${APP_NAME}
                port:
                  number: 80
